docs: everything new

--- a/references.bib
+++ b/references.bib
@@ -1,4 +1,355 @@
 
+@article{geiss_direct_2008,
+	title = {Direct multiplexed measurement of gene expression with color-coded probe pairs},
+	volume = {26},
+	copyright = {2008 Nature Publishing Group},
+	issn = {1546-1696},
+	url = {https://www.nature.com/articles/nbt1385},
+	doi = {10.1038/nbt1385},
+	abstract = {We describe a technology, the NanoString nCounter gene expression system, which captures and counts individual mRNA transcripts. Advantages over existing platforms include direct measurement of mRNA expression levels without enzymatic reactions or bias, sensitivity coupled with high multiplex capability, and digital readout. Experiments performed on 509 human genes yielded a replicate correlation coefficient of 0.999, a detection limit between 0.1 fM and 0.5 fM, and a linear dynamic range of over 500-fold. Comparison of the NanoString nCounter gene expression system with microarrays and TaqMan PCR demonstrated that the nCounter system is more sensitive than microarrays and similar in sensitivity to real-time PCR. Finally, a comparison of transcript levels for 21 genes across seven samples measured by the nCounter system and SYBR Green real-time PCR demonstrated similar patterns of gene expression at all transcript levels.},
+	language = {en},
+	number = {3},
+	urldate = {2023-04-18},
+	journal = {Nature Biotechnology},
+	author = {Geiss, Gary K. and Bumgarner, Roger E. and Birditt, Brian and Dahl, Timothy and Dowidar, Naeem and Dunaway, Dwayne L. and Fell, H. Perry and Ferree, Sean and George, Renee D. and Grogan, Tammy and James, Jeffrey J. and Maysuria, Malini and Mitton, Jeffrey D. and Oliveri, Paola and Osborn, Jennifer L. and Peng, Tao and Ratcliffe, Amber L. and Webster, Philippa J. and Davidson, Eric H. and Hood, Leroy and Dimitrov, Krassen},
+	month = mar,
+	year = {2008},
+	keywords = {Agriculture, Bioinformatics, Biomedical Engineering/Biotechnology, Biomedicine, Biotechnology, Life Sciences, general},
+	pages = {317--325},
+}
+
+@article{nirenberg_rna_1964,
+	title = {{RNA} codewords and protein synthesis: the effect of trinucleotides upon binding of {sRNA} to ribosomes},
+	volume = {145},
+	issn = {0036-8075},
+	doi = {10.1126/science.145.3639.1399},
+	abstract = {A rapid, sensitive method is described for measuring C(14)-aminoacyl-sRNA interactions with ribosomes which are specifically induced by the appropriate RNA codewords prior to peptide-bond formation. Properties of the codeword recognition process and the minimum oligonucleotide chain length required to induce such interactions are presented. The trinucleotides, pUpUpU, pApApA, and pCpCpC, but not dinucleotides, specifically direct the binding to ribosomes of phenylalanine-, lysine-, and proline-sRNA, respectively. Since 5'-terminal, 3'-terminal, and internal codewords differ in chemical structure, three corresponding classes of codewords are proposed. The recognition of each class in this system is described. The template efficiency of trinucleotide codewords is modified greatly by terminal phosphate. Triplets with 5'-terminal phosphate are more active as templates than triplets without terminal phosphate. Triplets with 3'- or 3' (2')-terminal phosphate are markedly less active as templates. These findings are discussed in relation to the probable functions of terminal codewords. The modification of RNA and DNA codewords, converting sense into missense or nonsense codewords, is suggested as a possible regulatory mechanism in protein synthesis.},
+	language = {eng},
+	number = {3639},
+	journal = {Science (New York, N.Y.)},
+	author = {Nirenberg, M. and Leder, P.},
+	month = sep,
+	year = {1964},
+	pmid = {14172630},
+	keywords = {Adenine Nucleotides, CARBON ISOTOPES, Carbon Isotopes, EXPERIMENTAL LAB STUDY, Escherichia coli, Lysine, NUCLEOPROTEINS, NUCLEOTIDES, NUCLEOTIDYLTRANSFERASES, Nucleoproteins, Nucleotides, Nucleotidyltransferases, Oligoribonucleotides, PROTEIN METABOLISM, Phenylalanine, Proline, Protein Biosynthesis, Proteins, RIBOSOMES, RNA, RNA, SOLUBLE, Research, Ribosomes},
+	pages = {1399--1407},
+}
+
+@article{tamura_genetic_2016,
+	title = {The {Genetic} {Code}: {Francis} {Crick}’s {Legacy} and {Beyond}},
+	volume = {6},
+	issn = {2075-1729},
+	shorttitle = {The {Genetic} {Code}},
+	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5041012/},
+	doi = {10.3390/life6030036},
+	number = {3},
+	urldate = {2023-04-08},
+	journal = {Life},
+	author = {Tamura, Koji},
+	month = aug,
+	year = {2016},
+	pmid = {27571106},
+	pmcid = {PMC5041012},
+	pages = {36},
+}
+
+@article{brenner_uga_1967,
+	title = {{UGA}: {A} {Third} {Nonsense} {Triplet} in the {Genetic} {Code}},
+	volume = {213},
+	copyright = {1967 Nature Publishing Group},
+	issn = {1476-4687},
+	shorttitle = {{UGA}},
+	url = {https://www.nature.com/articles/213449a0},
+	doi = {10.1038/213449a0},
+	abstract = {Two base triplets of the genetic code are known not to represent any amino-acid. It now appears that, in Escherichia coli, the UGA triplet of the bases uracil, guanine and adenine does not code for an amino-acid and is therefore also a “nonsense triplet”.},
+	language = {en},
+	number = {5075},
+	urldate = {2023-04-08},
+	journal = {Nature},
+	author = {Brenner, S. and Barnett, L. and Katz, E. R. and Crick, F. H. C.},
+	month = feb,
+	year = {1967},
+	keywords = {Humanities and Social Sciences, Science, multidisciplinary},
+	pages = {449--450},
+}
+
+@article{crick_general_1961,
+	title = {General {Nature} of the {Genetic} {Code} for {Proteins}},
+	volume = {192},
+	copyright = {1961 Nature Publishing Group},
+	issn = {1476-4687},
+	url = {https://www.nature.com/articles/1921227a0},
+	doi = {10.1038/1921227a0},
+	language = {en},
+	number = {4809},
+	urldate = {2023-04-08},
+	journal = {Nature},
+	author = {Crick, F. H. C. and Barnett, Leslie and Brenner, S. and Watts-Tobin, R. J.},
+	month = dec,
+	year = {1961},
+	keywords = {Humanities and Social Sciences, Science, multidisciplinary},
+	pages = {1227--1232},
+}
+
+@article{brenner_unstable_1961,
+	title = {An unstable intermediate carrying information from genes to ribosomes for protein synthesis},
+	volume = {190},
+	issn = {0028-0836},
+	doi = {10.1038/190576a0},
+	language = {eng},
+	journal = {Nature},
+	author = {Brenner, S. and Jacob, F. and Meselson, M.},
+	month = may,
+	year = {1961},
+	pmid = {20446365},
+	keywords = {Bacteriophage T4, Escherichia coli, Genes, Bacterial, Protein Biosynthesis, RNA Stability, RNA, Bacterial, RNA, Messenger, Ribosomes},
+	pages = {576--581},
+}
+
+@article{crick_protein_1958,
+	title = {On protein synthesis},
+	volume = {12},
+	issn = {0081-1386},
+	language = {eng},
+	journal = {Symposia of the Society for Experimental Biology},
+	author = {Crick, F. H.},
+	year = {1958},
+	pmid = {13580867},
+	keywords = {PROTEINS/metabolism, Protein Biosynthesis, Proteins},
+	pages = {138--163},
+}
+
+@article{cobb_who_2015,
+	title = {Who discovered messenger {RNA}?},
+	volume = {25},
+	issn = {0960-9822},
+	url = {https://www.sciencedirect.com/science/article/pii/S0960982215006065},
+	doi = {10.1016/j.cub.2015.05.032},
+	abstract = {The announcement of the discovery of messenger RNA (mRNA) and the cracking of the genetic code took place within weeks of each other in a climax of scientific excitement during the summer of 1961. Although mRNA is of decisive importance to our understanding of gene function, no Nobel Prize was awarded for its discovery. The large number of people involved, the complex nature of the results, and the tortuous path that was taken over half a century ago, all show that simple claims of priority may not reflect how science works.},
+	language = {en},
+	number = {13},
+	urldate = {2023-04-08},
+	journal = {Current Biology},
+	author = {Cobb, Matthew},
+	month = jun,
+	year = {2015},
+	pages = {R526--R532},
+}
+
+@book{hastie_elements_2009,
+	address = {New York, NY},
+	series = {Springer {Series} in {Statistics}},
+	title = {The {Elements} of {Statistical} {Learning}},
+	isbn = {9780387848570 9780387848587},
+	url = {http://link.springer.com/10.1007/978-0-387-84858-7},
+	urldate = {2023-04-08},
+	publisher = {Springer},
+	author = {Hastie, Trevor and Tibshirani, Robert and Friedman, Jerome},
+	year = {2009},
+	doi = {10.1007/978-0-387-84858-7},
+	keywords = {Averaging, Boosting, Projection pursuit, Random Forest, Support Vector Machine, classification, clustering, data mining, machine learning, supervised learning, unsupervised learning},
+}
+
+@book{stewart_professor_2010,
+	title = {Professor {Stewart}'s {Hoard} of {Mathematical} {Treasures}},
+	isbn = {9781847652621},
+	abstract = {Ian Stewart, author of the bestselling Professor Stewart's Cabinet of Mathematical Curiosities, presents a new and magical mix of games, puzzles, paradoxes, brainteasers, and riddles. He mingles these with forays into ancient and modern mathematical thought, appallingly hilarious mathematical jokes, and enquiries into the great mathematical challenges of the present and past. Amongst a host of arcane and astonishing facts about every kind of number from irrational or imaginary to complex or cuneiform, we find out: how to organise chaos; how matter balances anti-matter; how to turn a sphere inside out (without creasing it...); why you can't comb a hairy ball; how to calculate pi by observing the stars. And we get some tantalising glimpses of the maths of life and the universe.Mind-stretching, enlightening and endlessly amusing, Professor Stewart's new entertainment will stimulate, delight, and enthral.},
+	language = {en},
+	publisher = {Profile Books},
+	author = {Stewart, Ian},
+	month = dec,
+	year = {2010},
+	note = {Google-Books-ID: uHOM\_EvDG7gC},
+	keywords = {Mathematics / General},
+}
+
+@article{boivin_sur_1947,
+	title = {Sur le rôle possible des deux acides nucléiques dans la cellule vivante},
+	volume = {3},
+	issn = {0014-4754},
+	url = {https://doi.org/10.1007/BF02155119},
+	doi = {10.1007/BF02155119},
+	abstract = {According to the writer's theory a great number of different desoxyribonucleic and ribonucleic acids exist in each cell: desoxyribonucleic acids in the nucleus (genes) and ribonucleic acids in the cytoplasm (microsomes). Through catalytic actions the macromolecular desoxyribonucleic acids govern the building of macromolecular ribonucleic acids, and, in turn, these control the production of cytoplasmic enzymes. In truth, the enzymic equipment results simultaneously from the effect of ribonucleic acids (catalytic action) and from the effect of substrates (mass action). This hypothesis explains cellular differentiation (multicellular organism) through constitutional variations of cytoplasmic ribonucleic acids. The writer's fundamental arguments come from the study of bacterial biology, especially from the study of mutations directed by principles of desoxyribonucleic nature.},
+	language = {fr},
+	number = {1},
+	urldate = {2023-04-08},
+	journal = {Experientia},
+	author = {Boivin, André and Vendrely, Roger},
+	month = jan,
+	year = {1947},
+	pages = {32--34},
+}
+
+@article{wilkins_molecular_1953,
+	title = {Molecular {Structure} of {Nucleic} {Acids}: {Molecular} {Structure} of {Deoxypentose} {Nucleic} {Acids}},
+	volume = {171},
+	copyright = {1953 Nature Publishing Group},
+	issn = {1476-4687},
+	shorttitle = {Molecular {Structure} of {Nucleic} {Acids}},
+	url = {https://www.nature.com/articles/171738a0},
+	doi = {10.1038/171738a0},
+	language = {en},
+	number = {4356},
+	urldate = {2023-04-08},
+	journal = {Nature},
+	author = {Wilkins, M. H. F. and Stokes, A. R. and Wilson, H. R.},
+	month = apr,
+	year = {1953},
+	keywords = {Humanities and Social Sciences, Science, multidisciplinary},
+	pages = {738--740},
+}
+
+@article{franklin_molecular_1953,
+	title = {Molecular {Configuration} in {Sodium} {Thymonucleate}},
+	volume = {171},
+	copyright = {1953 Nature Publishing Group},
+	issn = {1476-4687},
+	url = {https://www.nature.com/articles/171740a0},
+	doi = {10.1038/171740a0},
+	language = {en},
+	number = {4356},
+	urldate = {2023-04-08},
+	journal = {Nature},
+	author = {Franklin, Rosalind E. and Gosling, R. G.},
+	month = apr,
+	year = {1953},
+	keywords = {Humanities and Social Sciences, Science, multidisciplinary},
+	pages = {740--741},
+}
+
+@article{maddox_double_2003,
+	title = {The double helix and the 'wronged heroine'},
+	volume = {421},
+	copyright = {2003 Nature Publishing Group},
+	issn = {1476-4687},
+	url = {https://www.nature.com/articles/nature01399},
+	doi = {10.1038/nature01399},
+	abstract = {In 1962, James Watson, Francis Crick and Maurice Wilkins received the Nobel prize for the discovery of the structure of DNA. Notably absent from the podium was Rosalind Franklin, whose X-ray photographs of DNA contributed directly to the discovery of the double helix. Franklin's premature death, combined with misogynist treatment by the male scientific establishment, cast her as a feminist icon. This myth overshadowed her intellectual strength and independence both as a scientist and as an individual.},
+	language = {en},
+	number = {6921},
+	urldate = {2023-04-08},
+	journal = {Nature},
+	author = {Maddox, Brenda},
+	month = jan,
+	year = {2003},
+	keywords = {Humanities and Social Sciences, Science, multidisciplinary},
+	pages = {407--408},
+}
+
+@article{watson_molecular_1953,
+	title = {Molecular {Structure} of {Nucleic} {Acids}: {A} {Structure} for {Deoxyribose} {Nucleic} {Acid}},
+	volume = {171},
+	copyright = {1953 Nature Publishing Group},
+	issn = {1476-4687},
+	shorttitle = {Molecular {Structure} of {Nucleic} {Acids}},
+	url = {https://www.nature.com/articles/171737a0},
+	doi = {10.1038/171737a0},
+	abstract = {The determination in 1953 of the structure of deoxyribonucleic acid (DNA), with its two entwined helices and paired organic bases, was a tour de force in X-ray crystallography. But more significantly, it also opened the way for a deeper understanding of perhaps the most important biological process. In the words of Watson and Crick: "It has not escaped our notice that the specific pairing that we have postulated immediately suggests a possible copying mechanism for the genetic material." [Obituary of Francis Crick: Nature 430, 845-847 (2004); obituary of Maurice Wilkins: Nature 431, 922 (2004)]},
+	language = {en},
+	number = {4356},
+	urldate = {2023-04-08},
+	journal = {Nature},
+	author = {Watson, J. D. and Crick, F. H. C.},
+	month = apr,
+	year = {1953},
+	keywords = {Humanities and Social Sciences, Science, multidisciplinary},
+	pages = {737--738},
+}
+
+@article{coffin_discovery_2016,
+	title = {The {Discovery} of {Reverse} {Transcriptase}},
+	volume = {3},
+	url = {https://doi.org/10.1146/annurev-virology-110615-035556},
+	doi = {10.1146/annurev-virology-110615-035556},
+	abstract = {In 1970 the independent and simultaneous discovery of reverse transcriptase in retroviruses (then RNA tumor viruses) by David Baltimore and Howard Temin revolutionized molecular biology and laid the foundations for retrovirology and cancer biology. In this historical review we describe the formulation of the controversial provirus hypothesis by Temin, which ultimately was proven by his discovery of reverse transcriptase in Rous sarcoma virus virions. Baltimore arrived at the same discovery through his studies on replication of RNA-containing viruses, starting with poliovirus and then moving to vesicular stomatitis virus, where he discovered a virion RNA polymerase. Subsequent studies of reverse transcriptase led to the elucidation of the mechanism of retrovirus replication, the discovery of oncogenes, the advent of molecular cloning, the search for human cancer viruses, and the discovery and treatment of HIV/AIDS.},
+	number = {1},
+	urldate = {2023-04-07},
+	journal = {Annual Review of Virology},
+	author = {Coffin, John M. and Fan, Hung},
+	year = {2016},
+	pmid = {27482900},
+	keywords = {David Baltimore, HIV, Howard Temin, RNA tumor virus, Rous sarcoma virus, murine leukemia virus, retrovirus},
+	pages = {29--51},
+}
+
+@article{temin_rna-dependent_1970,
+	title = {{RNA}-dependent {DNA} polymerase in virions of {Rous} sarcoma virus},
+	volume = {226},
+	issn = {0028-0836},
+	doi = {10.1038/2261211a0},
+	language = {eng},
+	number = {5252},
+	journal = {Nature},
+	author = {Temin, H. M. and Mizutani, S.},
+	month = jun,
+	year = {1970},
+	pmid = {4316301},
+	keywords = {Avian Sarcoma Viruses, Centrifugation, Density Gradient, DNA Nucleotidyltransferases, DNA, Viral, Glycols, Kinetics, Nucleotides, RNA, Viral, Sulfhydryl Compounds, Templates, Genetic, Tritium},
+	pages = {1211--1213},
+}
+
+@article{baltimore_rna-dependent_1970,
+	title = {{RNA}-dependent {DNA} polymerase in virions of {RNA} tumour viruses},
+	volume = {226},
+	issn = {0028-0836},
+	doi = {10.1038/2261209a0},
+	language = {eng},
+	number = {5252},
+	journal = {Nature},
+	author = {Baltimore, D.},
+	month = jun,
+	year = {1970},
+	pmid = {4316300},
+	keywords = {Avian Sarcoma Viruses, Cytochromes, DNA Nucleotidyltransferases, DNA, Viral, Muramidase, Nucleotides, RNA Nucleotidyltransferases, RNA, Viral, Rauscher Virus, Ribonucleases, Templates, Genetic, Tritium, Vesicular stomatitis Indiana virus},
+	pages = {1209--1211},
+}
+
+@book{wild_world_2020,
+	title = {World {Cancer} {Report}: {Cancer} {Research} for {Cancer} {Prevention}},
+	isbn = {9789283204473 9789283204480},
+	shorttitle = {World {Cancer} {Report}},
+	url = {https://publications.iarc.fr/Non-Series-Publications/World-Cancer-Reports/World-Cancer-Report-Cancer-Research-For-Cancer-Prevention-2020},
+	language = {en},
+	urldate = {2020-12-01},
+	publisher = {IARC Publications},
+	author = {Wild, CP and Weiderpass, E and Stewart, BW},
+	year = {2020},
+}
+
+@inproceedings{reiersol_confluence_1945,
+	title = {Confluence analysis by means of instrumental sets of variables},
+	url = {https://www.semanticscholar.org/paper/Confluence-analysis-by-means-of-instrumental-sets-Reiers%C3%B6l/e24fab07b33f9521febf11ccdbea0d5bdb38f927},
+	abstract = {Semantic Scholar extracted view of "Confluence analysis by means of instrumental sets of variables" by Olav Reiersöl},
+	urldate = {2023-02-16},
+	booktitle = {Issue 4 of {Arkiv} for matematik, astronomi och fysik},
+	author = {Reiersöl, Olav},
+	year = {1945},
+}
+
+@inproceedings{curth_nonparametric_2021,
+	title = {Nonparametric {Estimation} of {Heterogeneous} {Treatment} {Effects}: {From} {Theory} to {Learning} {Algorithms}},
+	shorttitle = {Nonparametric {Estimation} of {Heterogeneous} {Treatment} {Effects}},
+	url = {https://www.semanticscholar.org/paper/Nonparametric-Estimation-of-Heterogeneous-Treatment-Curth-Schaar/4715f06492fd16009e913fa049f31a95087a6c3b},
+	abstract = {The need to evaluate treatment effectiveness is ubiquitous in most of empirical science, and interest in flexibly investigating effect heterogeneity is growing rapidly. To do so, a multitude of model-agnostic, nonparametric meta-learners have been proposed in recent years. Such learners decompose the treatment effect estimation problem into separate sub-problems, each solvable using standard supervised learning methods. Choosing between different meta-learners in a datadriven manner is difficult, as it requires access to counterfactual information. Therefore, with the ultimate goal of building better understanding of the conditions under which some learners can be expected to perform better than others a priori, we theoretically analyze four broad meta-learning strategies which rely on plug-in estimation and pseudo-outcome regression. We highlight how this theoretical reasoning can be used to guide principled algorithm design and translate our analyses into practice by considering a variety of neural network architectures as base-learners for the discussed metalearning strategies. In a simulation study, we showcase the relative strengths of the learners under different data-generating processes.},
+	urldate = {2023-01-17},
+	booktitle = {Proceedings of {The} 24th {International} {Conference} on {Artificial} {Intelligence} and {Statistics}},
+	author = {Curth, A. and Schaar, M.},
+	month = jan,
+	year = {2021},
+}
+
+@article{demirhan_bayesian_2015,
+	title = {A {Bayesian} approach to {Cox}-{Gompertz} model},
+	volume = {45},
+	doi = {10.15672/HJMS.20158012506},
+	abstract = {Survival analysis has a wide application area from medicine to marketing and Cox model takes an important part in survival analysis. When the distribution of survival data is known or it is appropriate to assume a survival distribution,use of a parametric form of Cox model is employed. In this article,we take into account Cox-Gompertz model from the Bayesian perspective. Considering the difficulties in parameter es-timation in classical setting,we propose a simple Bayesian approach for Cox-Gompertz model. We derive full conditional posterior distributions of all parameters in Cox-Gompertz model to run Gibbs sampling. Over an extensive simulation study,estimation accuracies of the classical Cox model and classical and Bayesian settings of Cox-Gompertz model are compared with each other by generating exponential,Weibull,and Gompertz distributed survival data sets. Consequently,if survival data follows Gompertz distribution,most accurate parameter estimates are obtained by the Bayesian setting of Cox-Gompertz model. We also provide a real data analysis to illustrate our approach. In the data analysis,we observe the importance of use of the most accurate model over the survival probabilities of censored observations.},
+	journal = {Hacettepe Journal of Mathematics and Statistics},
+	author = {Demirhan, Haydar and Ata Tutkun, Nihal},
+	month = jul,
+	year = {2015},
+	pages = {1--1},
+}
+
 @article{safarika_29-mrna_2021,
 	title = {A 29-{mRNA} host response test from blood accurately distinguishes bacterial and viral infections among emergency department patients},
 	volume = {9},
@@ -282,15 +633,6 @@ or preventative action.},
 	month = apr,
 	year = {1983},
 	pages = {41--55},
-}
-
-@inproceedings{reiersol_confluence_1945,
-	title = {Confluence analysis by means of instrumental sets of variables},
-	url = {https://www.semanticscholar.org/paper/Confluence-analysis-by-means-of-instrumental-sets-Reiers%C3%B6l/e24fab07b33f9521febf11ccdbea0d5bdb38f927},
-	abstract = {Semantic Scholar extracted view of "Confluence analysis by means of instrumental sets of variables" by Olav Reiersöl},
-	urldate = {2023-02-16},
-	author = {Reiersöl, Olav},
-	year = {1945},
 }
 
 @article{thistlethwaite_regression-discontinuity_1960,
@@ -892,25 +1234,6 @@ FUNDING: Sanofi US Services, Project Data Sphere.},
 	keywords = {Computer Science - Machine Learning, Electrical Engineering and Systems Science - Image and Video Processing, Quantitative Biology - Genomics, Statistics - Machine Learning},
 }
 
-@article{bradley_data-driven_2022-1,
-	title = {Data-driven design of targeted gene panels for estimating immunotherapy biomarkers},
-	volume = {5},
-	copyright = {2022 The Author(s)},
-	issn = {2399-3642},
-	url = {https://www.nature.com/articles/s42003-022-03098-1},
-	doi = {10.1038/s42003-022-03098-1},
-	abstract = {Tumour mutation burden and other exome-wide biomarkers are used to determine which patients will benefit from immunotherapy. However, the cost of whole exome sequencing limits the widespread use of such biomarkers. Here, we introduce a data-driven framework for the design of targeted gene panels for estimating a broad class of biomarkers including tumour mutation burden and tumour indel burden. Our first goal is to develop a generative model for the profile of mutation across the exome, which allows for gene- and variant type-dependent mutation rates. Based on this model, we then propose a procedure for constructing biomarker estimators. Our approach allows the practitioner to select a targeted gene panel of prespecified size and construct an estimator that only depends on the selected genes. Alternatively, our method may be applied to make predictions based on an existing gene panel, or to augment a gene panel to a given size. We demonstrate the excellent performance of our proposal using data from three non small-cell lung cancer studies, as well as data from six other cancer types.},
-	language = {en},
-	number = {1},
-	urldate = {2023-01-20},
-	journal = {Communications Biology},
-	author = {Bradley, Jacob R. and Cannings, Timothy I.},
-	month = feb,
-	year = {2022},
-	keywords = {Cancer genomics, Statistical methods, Tumour biomarkers},
-	pages = {1--12},
-}
-
 @inproceedings{liu_review_2017,
 	address = {Cham},
 	series = {Lecture {Notes} in {Computer} {Science}},
@@ -1097,17 +1420,6 @@ CONCLUSION: We found a higher frequency of EGFR mutations than expected in a coh
 	year = {2021},
 	keywords = {causal survival analysis, counterfactual inference, hazard ratio, representation learning, survival analysis, time-to-event},
 	pages = {133--145},
-}
-
-@inproceedings{curth_nonparametric_2021,
-	title = {Nonparametric {Estimation} of {Heterogeneous} {Treatment} {Effects}: {From} {Theory} to {Learning} {Algorithms}},
-	shorttitle = {Nonparametric {Estimation} of {Heterogeneous} {Treatment} {Effects}},
-	url = {https://www.semanticscholar.org/paper/Nonparametric-Estimation-of-Heterogeneous-Treatment-Curth-Schaar/4715f06492fd16009e913fa049f31a95087a6c3b},
-	abstract = {The need to evaluate treatment effectiveness is ubiquitous in most of empirical science, and interest in flexibly investigating effect heterogeneity is growing rapidly. To do so, a multitude of model-agnostic, nonparametric meta-learners have been proposed in recent years. Such learners decompose the treatment effect estimation problem into separate sub-problems, each solvable using standard supervised learning methods. Choosing between different meta-learners in a datadriven manner is difficult, as it requires access to counterfactual information. Therefore, with the ultimate goal of building better understanding of the conditions under which some learners can be expected to perform better than others a priori, we theoretically analyze four broad meta-learning strategies which rely on plug-in estimation and pseudo-outcome regression. We highlight how this theoretical reasoning can be used to guide principled algorithm design and translate our analyses into practice by considering a variety of neural network architectures as base-learners for the discussed metalearning strategies. In a simulation study, we showcase the relative strengths of the learners under different data-generating processes.},
-	urldate = {2023-01-17},
-	author = {Curth, A. and Schaar, M.},
-	month = jan,
-	year = {2021},
 }
 
 @article{kunzel_metalearners_2019,
@@ -1529,25 +1841,6 @@ Using a two-stage approach, this study validates several actionable targets for 
 	pmid = {27077029},
 	pmcid = {PMC4822216},
 	pages = {9--16},
-}
-
-@article{bradley_data-driven_2022-2,
-	title = {Data-driven design of targeted gene panels for estimating immunotherapy biomarkers},
-	volume = {5},
-	copyright = {2022 The Author(s)},
-	issn = {2399-3642},
-	url = {https://www.nature.com/articles/s42003-022-03098-1},
-	doi = {10.1038/s42003-022-03098-1},
-	abstract = {Tumour mutation burden and other exome-wide biomarkers are used to determine which patients will benefit from immunotherapy. However, the cost of whole exome sequencing limits the widespread use of such biomarkers. Here, we introduce a data-driven framework for the design of targeted gene panels for estimating a broad class of biomarkers including tumour mutation burden and tumour indel burden. Our first goal is to develop a generative model for the profile of mutation across the exome, which allows for gene- and variant type-dependent mutation rates. Based on this model, we then propose a procedure for constructing biomarker estimators. Our approach allows the practitioner to select a targeted gene panel of prespecified size and construct an estimator that only depends on the selected genes. Alternatively, our method may be applied to make predictions based on an existing gene panel, or to augment a gene panel to a given size. We demonstrate the excellent performance of our proposal using data from three non small-cell lung cancer studies, as well as data from six other cancer types.},
-	language = {en},
-	number = {1},
-	urldate = {2022-06-29},
-	journal = {Communications Biology},
-	author = {Bradley, Jacob R. and Cannings, Timothy I.},
-	month = feb,
-	year = {2022},
-	keywords = {Cancer genomics, Statistical methods, Tumour biomarkers},
-	pages = {1--12},
 }
 
 @article{he_optimization_2021,
@@ -2152,7 +2445,7 @@ Models},
 	pages = {124--128},
 }
 
-@article{svec_how_2015,
+@article{svec_how_2015-1,
 	title = {How good is a {PCR} efficiency estimate: {Recommendations} for precise and robust {qPCR} efficiency assessments},
 	volume = {3},
 	issn = {2214-7535},
@@ -2327,14 +2620,6 @@ Models},
 	year = {2020},
 	keywords = {Animal models, Breast cancer, Cancers and neoplasms, Colorectal cancer, Lung and intrathoracic tumors, Malignant tumors, Prostate cancer, Thyroid carcinoma},
 	pages = {e1007178},
-}
-
-@article{tutkun_bayesian_2016,
-	title = {A {Bayesian} approach to {Cox}-{Gompertz} model},
-	doi = {10.15672/hjms.20158012506},
-	abstract = {Survival analysis has a wide application area from medicine to marketing and Cox model takes an important part in survival analysis. When the distribution of survival data is known or it is appropriate to assume a survival distribution, use of a parametric form of Cox model is employed. In this article, we take into account Cox-Gompertz model from the Bayesian perspective. Considering the difficulties in parameter estimation in classical setting, we propose a simple Bayesian approach for Cox-Gompertz model. We derive full conditional posterior distributions of all parameters in Cox-Gompertz model to run Gibbs sampling. Over an extensive simulation study, estimation accuracies of the classical Cox model and classical and Bayesian settings of Cox-Gompertz model are compared with each other by generating exponential, Weibull, and Gompertz distributed survival data sets. Consequently, if survival data follows Gompertz distribution, most accurate parameter estimates are obtained by the Bayesian setting of Cox-Gompertz model. We also provide a real data analysis to illustrate our approach. In the data analysis, we observe the importance of use of the most accurate model over the survival probabilities of censored observations.},
-	author = {Tutkun, N. A. and Demirhan, H.},
-	year = {2016},
 }
 
 @article{sasaki_informative_2016,
@@ -4928,25 +5213,6 @@ by setting higher prices for the remainder of the market.},
 	pages = {5463},
 }
 
-@article{watson_molecular_1953,
-	title = {Molecular {Structure} of {Nucleic} {Acids}: {A} {Structure} for {Deoxyribose} {Nucleic} {Acid}},
-	volume = {171},
-	copyright = {1953 Nature Publishing Group},
-	issn = {1476-4687},
-	shorttitle = {Molecular {Structure} of {Nucleic} {Acids}},
-	url = {https://www.nature.com/articles/171737a0},
-	doi = {10.1038/171737a0},
-	abstract = {The determination in 1953 of the structure of deoxyribonucleic acid (DNA), with its two entwined helices and paired organic bases, was a tour de force in X-ray crystallography. But more significantly, it also opened the way for a deeper understanding of perhaps the most important biological process. In the words of Watson and Crick: "It has not escaped our notice that the specific pairing that we have postulated immediately suggests a possible copying mechanism for the genetic material." [Obituary of Francis Crick:},
-	language = {en},
-	number = {4356},
-	urldate = {2020-12-02},
-	journal = {Nature},
-	author = {Watson, J. D. and Crick, F. H. C.},
-	month = apr,
-	year = {1953},
-	pages = {737--738},
-}
-
 @article{tefferi_jak2_2007,
 	title = {{JAK2} {Mutations} in {Polycythemia} {Vera} — {Molecular} {Mechanisms} and {Clinical} {Applications}},
 	volume = {356},
@@ -5001,17 +5267,6 @@ by setting higher prices for the remainder of the market.},
 	year = {2008},
 	pmid = {18757396},
 	pages = {6861--6862},
-}
-
-@book{wild_world_2020,
-	title = {World {Cancer} {Report}: {Cancer} {Research} for {Cancer} {Prevention}},
-	isbn = {9789283204473 9789283204480},
-	shorttitle = {World {Cancer} {Report}},
-	url = {https://publications.iarc.fr/Non-Series-Publications/World-Cancer-Reports/World-Cancer-Report-Cancer-Research-For-Cancer-Prevention-2020},
-	language = {en},
-	urldate = {2020-12-01},
-	author = {Wild, CP and Weiderpass, E and Stewart, BW},
-	year = {2020},
 }
 
 @misc{kanavos_rising_2006,
